@@ -7,6 +7,6 @@
         <p class="">Would you like to resubmit the form data found at the time of your last save attempt? <span
                 class="discreet" id="js-restore-save-timestamp"></span></p>
        <p class="visualHidden" tal:content="python:context.toLocalizedTime(here.modified(), long_format=True)" id="js-restore-object-modification-timestamp"></p>
-       <p class="visualHidden" id="js-restore-object-modification-timestamp-message"><span class="eea-icon eea-icon-exclamation-circle"></span> The form has been modified between the time of this save attempt and now. Please check the history of the object before using this dialog in order to ensure that this data is still relevant</p>
+       <p class="visualHidden" id="js-restore-object-modification-timestamp-message"><span class="eea-icon eea-icon-exclamation-circle"></span> The form has been modified between the time of this restore data and now. Please check the history of the object before using this dialog in order to ensure that this data is still relevant</p>
 </div>
 </tal:content>
